@@ -1,11 +1,15 @@
 package com.TenX.Automobile.config;
 
-import java.util.Arrays;
-import java.util.List;
-
+import com.TenX.Automobile.security.JwtAuthenticationFilter;
+import com.TenX.Automobile.security.constants.SecurityConstants;
+import com.TenX.Automobile.security.jwt.JwtTokenProvider;
+import com.TenX.Automobile.service.MyUserDetailsService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -23,83 +27,166 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import com.TenX.Automobile.security.JwtAuthenticationFilter;
 
 /**
- * Enterprise-level Security Configuration with role-based access control
+ * Enterprise-level Security Configuration with RBAC
+ * Implements JWT authentication, role-based access control, and security best practices
  */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthFilter;
+    private final JwtTokenProvider jwtTokenProvider;
+    private final MyUserDetailsService userDetailsService;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter) {
-        this.jwtAuthFilter = jwtAuthFilter;
-    }
-
+    /**
+     * Security filter chain configuration
+     * Configures authentication, authorization, CORS, CSRF, and session management
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // Disable CSRF for stateless JWT authentication
                 .csrf(AbstractHttpConfigurer::disable)
+                
+                // Configure CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                
+                // Configure session management (stateless)
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                
+                // Configure authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints
-                        .requestMatchers("/api/auth/signup", "/api/auth/login").permitAll()
-                        .requestMatchers("/public/**", "/actuator/health").permitAll()
+
+                        // Public endpoints (no authentication required)
+                        .requestMatchers(SecurityConstants.PUBLIC_URLS).permitAll()
+                        .requestMatchers("/api/auth/signup").permitAll()
+                        .requestMatchers("/api/auth/login").permitAll()
                         
-                        // Admin-only endpoints
-                        .requestMatchers("/api/auth/users", "/api/auth/users/*/activate", "/api/auth/users/*/deactivate").hasRole("ADMIN")
+                        // Admin endpoints - ADMIN role only
+                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
                         
-                        // Manager and Admin endpoints
-                        .requestMatchers("/api/auth/users/role/**", "/api/auth/users/managed/**").hasAnyRole("MANAGER", "ADMIN")
+                        // Manager endpoints - ADMIN and MANAGER roles
+                        .requestMatchers("/api/v1/manager/**").hasAnyRole("ADMIN", "MANAGER")
                         
-                        // Employee and above endpoints
-                        .requestMatchers("/api/employee/**").hasAnyRole("EMPLOYEE", "MANAGER", "ADMIN")
+                        // Staff endpoints - ADMIN, MANAGER, and STAFF roles
+                        .requestMatchers("/api/staff/**").hasAnyRole("ADMIN", "MANAGER", "STAFF")
                         
-                        // Manager and above endpoints
-                        .requestMatchers("/api/manager/**").hasAnyRole("MANAGER", "ADMIN")
+                        // Customer endpoints - All authenticated users
+                        .requestMatchers("/api/customer/**").hasAnyRole("ADMIN", "MANAGER", "STAFF", "CUSTOMER")
                         
-                        // Admin endpoints
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        
-                        // Authenticated endpoints
-                        .requestMatchers("/api/auth/profile", "/api/auth/logout").authenticated()
-                        
-                        // All other requests require authentication
+                        // All other endpoints require authentication
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                
+                // Configure authentication provider
+                .authenticationProvider(authenticationProvider())
+                
+                // Add JWT authentication filter
+                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
+                
+                // Configure exception handling
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(401);
+                            response.getWriter().write(
+                                    "{\"error\":\"Unauthorized\",\"message\":\"" + authException.getMessage() + "\"}"
+                            );
+                        })
+                        .accessDeniedHandler((request, response, accessDeniedException) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(403);
+                            response.getWriter().write(
+                                    "{\"error\":\"Forbidden\",\"message\":\"Access denied: " + accessDeniedException.getMessage() + "\"}"
+                            );
+                        })
+                );
 
         return http.build();
     }
 
-    // Spring Boot will auto-configure DaoAuthenticationProvider when UserDetailsService is available
+    /**
+     * JWT Authentication Filter bean
+     */
+    @Bean
+    public JwtAuthenticationFilter jwtAuthenticationFilter() {
+        return new JwtAuthenticationFilter(jwtTokenProvider, userDetailsService);
+    }
 
+    /**
+     * Authentication provider with BCrypt password encoder
+     */
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
+        return authProvider;
+    }
+
+    /**
+     * Authentication manager bean
+     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
+    /**
+     * BCrypt password encoder with strength 12
+     * Enterprise-level security standard
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(12); // Increased strength for enterprise security
+        return new BCryptPasswordEncoder(12);
     }
 
+    /**
+     * CORS configuration for cross-origin requests
+     * Configure allowed origins, methods, and headers
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow specific origins in production
-        configuration.setAllowedOriginPatterns(List.of("*")); // Configure specific origins in production
+        // Allow specific origins (configure for production)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:4200",
+                "http://localhost:8080"
+        ));
         
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Allow all HTTP methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
+        
+        // Allow all headers
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Expose headers to client
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+        
+        // Max age for preflight requests (1 hour)
         configuration.setMaxAge(3600L);
-
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
 }
